# dserver-development-stack

./: .env.template  .gitignore  .gitmodules  CLAUDE.md  Caddyfile  DEPLOYMENT-MODEL.md  caddy.json  docker-compose.override.yml  docker-compose.yml  gen-tls-certs.sh
compose/caddy/: Dockerfile
compose/dserver/: Dockerfile
compose/dserver/scripts/: export-s3-env.sh  make-venv.sh  start-dserver-gunicorn.sh
compose/ldap/bootstrap/: 01-testuser.ldif
compose/webapp/: Dockerfile  vue.config.js
compose/webapp/templates/: dtool.json
dserver-config-generator-plugin/: README.md  pyproject.toml
dserver-config-generator-plugin/dserver_config_generator_plugin/: __init__.py  blueprint.py  config.py  generator.py  plugin.py
dserver-config-generator-plugin/dserver_config_generator_plugin/credentials/: __init__.py  minio.py  none.py  static.py
dserver-config-generator-plugin/dserver_config_generator_plugin/templates/: dtool_readme.yml.j2
dserver-config-generator-plugin/tests/: test_credentials.py  test_generator.py  test_routes.py
dserver-token-generator-plugin-ldap/: README.md  pyproject.toml
dserver-token-generator-plugin-ldap/dserver_token_generator_plugin_ldap/: __init__.py  blueprint.py  config.py  jwt_utils.py  ldap_auth.py  plugin.py  user_provisioning.py
dserver-token-generator-plugin-ldap/tests/: conftest.py  test_ldap_plugin.py
dserver-token-generator-plugin-saml/: README.md  pyproject.toml
dserver-token-generator-plugin-saml/dserver_token_generator_plugin_saml/: __init__.py  blueprint.py  config.py  jwt_utils.py
